--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -179,8 +179,8 @@
 <ul style="list-style-type: none; padding: 0;">
     <li th:each="paper : ${results}" class="result">
         <span class="result-title" th:text="${paper.title}"></span><br />
-        <span class="result-snippet" th:text="${paper.contents.substring(0, 300) + '...'}"></span><br />
-        <a class="result-link" th:href="@{${'file://' + paper.path}}" target="_blank" rel="noopener noreferrer">Open Document</a>
+        <span class="result-snippet" th:text="${paper.summary.substring(0, 300) + '...'}"></span><br />
+        <a class="result-link" th:href="${paper.pdfLink}" target="_blank" rel="noopener noreferrer">Open Document</a>
     </li>
 </ul>
 
